--- a/static/index.html
+++ b/static/index.html
@@ -3,138 +3,190 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Go TODO App</title>
+    <title>Go Notes App</title>
     <style>
         body {
-            font-family: sans-serif;
-            max-width: 600px;
-            margin: 20px auto;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f9;
+            color: #333;
         }
 
         h1 {
             text-align: center;
+            color: #2c3e50;
         }
 
         form {
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
             display: flex;
-            gap: 8px;
-            margin-bottom: 16px;
+            flex-direction: column;
+            gap: 10px;
         }
 
-        input[type="text"] {
-            flex: 1;
-            padding: 6px;
+        input[type="text"],
+        textarea {
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-family: inherit;
+        }
+
+        textarea {
+            resize: vertical;
+            min-height: 80px;
         }
 
         button {
-            padding: 6px 10px;
+            padding: 10px 15px;
             cursor: pointer;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            transition: background-color 0.3s;
         }
 
-        ul {
+        button:hover {
+            background-color: #2980b9;
+        }
+
+        #notes-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
             list-style: none;
             padding: 0;
         }
 
-        li {
+        .note-card {
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 15px;
             display: flex;
-            align-items: center;
+            flex-direction: column;
             justify-content: space-between;
-            padding: 4px 0;
-            border-bottom: 1px solid #eee;
+            transition: transform 0.2s;
         }
 
-        .left {
+        .note-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        .note-title {
+            font-weight: bold;
+            font-size: 1.1em;
+            margin-bottom: 8px;
+            color: #2c3e50;
+        }
+
+        .note-content {
+            white-space: pre-wrap;
+            color: #555;
+            margin-bottom: 15px;
+            flex-grow: 1;
+        }
+
+        .note-actions {
             display: flex;
-            align-items: center;
-            gap: 8px;
+            justify-content: flex-end;
         }
 
-        .done {
-            text-decoration: line-through;
-            color: #777;
+        .delete-btn {
+            background-color: #e74c3c;
+            padding: 6px 12px;
+            font-size: 14px;
+        }
+
+        .delete-btn:hover {
+            background-color: #c0392b;
         }
     </style>
 </head>
 
 <body>
-    <h1>Go TODO App</h1>
+    <h1>Go Notes App</h1>
 
-    <form id="todo-form">
-        <input type="text" id="todo-title" placeholder="New todo..." required />
-        <button type="submit">Add</button>
+    <form id="note-form">
+        <input type="text" id="note-title" placeholder="Note Title" required />
+        <textarea id="note-content" placeholder="Note Content..."></textarea>
+        <button type="submit">Add Note</button>
     </form>
 
-    <ul id="todo-list"></ul>
+    <div id="notes-list"></div>
 
     <script>
-        const todoList = document.getElementById('todo-list');
-        const form = document.getElementById('todo-form');
-        const titleInput = document.getElementById('todo-title');
+        const notesList = document.getElementById('notes-list');
+        const form = document.getElementById('note-form');
+        const titleInput = document.getElementById('note-title');
+        const contentInput = document.getElementById('note-content');
 
-        async function loadTodos() {
-            const res = await fetch('/todos');
-            const data = await res.json();
-            renderTodos(data);
+        async function loadNotes() {
+            try {
+                const res = await fetch('/notes');
+                if (!res.ok) throw new Error('Failed to fetch notes');
+                const data = await res.json();
+                renderNotes(data || []);
+            } catch (err) {
+                console.error(err);
+            }
         }
 
-        function renderTodos(todos) {
-            todoList.innerHTML = '';
-            todos.forEach(todo => {
-                const li = document.createElement('li');
+        function renderNotes(notes) {
+            notesList.innerHTML = '';
+            notes.forEach(note => {
+                const card = document.createElement('div');
+                card.className = 'note-card';
 
-                const left = document.createElement('div');
-                left.className = 'left';
+                const title = document.createElement('div');
+                title.className = 'note-title';
+                title.textContent = note.title;
 
-                const checkbox = document.createElement('input');
-                checkbox.type = 'checkbox';
-                checkbox.checked = todo.done;
+                const content = document.createElement('div');
+                content.className = 'note-content';
+                content.textContent = note.content;
 
-                const span = document.createElement('span');
-                span.textContent = todo.title;
-                if (todo.done) {
-                    span.classList.add('done');
-                }
-
-                checkbox.addEventListener('change', async () => {
-                    await updateTodo(todo.id, todo.title, checkbox.checked);
-                    loadTodos();
-                });
-
-                left.appendChild(checkbox);
-                left.appendChild(span);
+                const actions = document.createElement('div');
+                actions.className = 'note-actions';
 
                 const delBtn = document.createElement('button');
+                delBtn.className = 'delete-btn';
                 delBtn.textContent = 'Delete';
                 delBtn.addEventListener('click', async () => {
-                    await deleteTodo(todo.id);
-                    loadTodos();
+                    if (confirm('Are you sure you want to delete this note?')) {
+                        await deleteNote(note.id);
+                        loadNotes();
+                    }
                 });
 
-                li.appendChild(left);
-                li.appendChild(delBtn);
-                todoList.appendChild(li);
+                actions.appendChild(delBtn);
+
+                card.appendChild(title);
+                card.appendChild(content);
+                card.appendChild(actions);
+                notesList.appendChild(card);
             });
         }
 
-        async function createTodo(title) {
-            await fetch('/todos', {
+        async function createNote(title, content) {
+            await fetch('/notes', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ title })
+                body: JSON.stringify({ title, content })
             });
         }
 
-        async function updateTodo(id, title, done) {
-            await fetch(`/todos/${id}`, {
-                method: 'PUT',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ title, done })
-            });
-        }
-
-        async function deleteTodo(id) {
-            await fetch(`/todos/${id}`, {
+        async function deleteNote(id) {
+            await fetch(`/notes/${id}`, {
                 method: 'DELETE'
             });
         }
@@ -142,14 +194,18 @@
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             const title = titleInput.value.trim();
+            const content = contentInput.value.trim();
             if (!title) return;
-            await createTodo(title);
+            
+            await createNote(title, content);
+            
             titleInput.value = '';
-            loadTodos();
+            contentInput.value = '';
+            loadNotes();
         });
 
         // initial load
-        loadTodos();
+        loadNotes();
     </script>
 </body>
 
