--- a/static/index.html
+++ b/static/index.html
@@ -3,150 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Notes App</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-
-        .container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        input[type="text"],
-        input[type="password"],
-        textarea {
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-family: inherit;
-        }
-
-        textarea {
-            resize: vertical;
-            min-height: 80px;
-        }
-
-        button {
-            padding: 10px 15px;
-            cursor: pointer;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #2980b9;
-        }
-
-        .secondary-btn {
-            background-color: #95a5a6;
-        }
-
-        .secondary-btn:hover {
-            background-color: #7f8c8d;
-        }
-
-        #notes-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            list-style: none;
-            padding: 0;
-            margin-top: 20px;
-        }
-
-        .note-card {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            transition: transform 0.2s;
-        }
-
-        .note-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        }
-
-        .note-title {
-            font-weight: bold;
-            font-size: 1.1em;
-            margin-bottom: 8px;
-            color: #2c3e50;
-        }
-
-        .note-content {
-            white-space: pre-wrap;
-            color: #555;
-            margin-bottom: 15px;
-            flex-grow: 1;
-        }
-
-        .note-actions {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        .delete-btn {
-            background-color: #e74c3c;
-            padding: 6px 12px;
-            font-size: 14px;
-        }
-
-        .delete-btn:hover {
-            background-color: #c0392b;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .auth-toggle {
-            text-align: center;
-            margin-top: 10px;
-            font-size: 0.9em;
-        }
-
-        .auth-toggle a {
-            color: #3498db;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        #user-info {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
